-- 清结算平台 V008 P0 DDL
-- 约定：金额字段 BIGINT，单位分，人民币；比例字段 ratio_bp，10000 = 100%。
-- P0 不设计非 P0 状态、逆向交易、出款、币种、多租户字段。


CREATE TABLE ccs_settlement_policy (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  policy_no VARCHAR(64) NOT NULL COMMENT '策略编号',
  policy_name VARCHAR(128) NOT NULL COMMENT '策略名称',
  policy_scope VARCHAR(32) NOT NULL DEFAULT 'GLOBAL' COMMENT '策略作用域：GLOBAL/BUSINESS_SCENE/CATEGORY/MERCHANT/CAMPAIGN',
  scope_key VARCHAR(128) NOT NULL DEFAULT '*' COMMENT '作用域键，例如业务线/类目/商户/活动编号，GLOBAL 使用 *',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  priority INT NOT NULL DEFAULT 100 COMMENT '策略优先级，数值越小优先级越高',
  effective_start_time DATETIME(3) NOT NULL COMMENT '生效开始时间',
  effective_end_time DATETIME(3) DEFAULT NULL COMMENT '生效结束时间，空表示长期有效',
  policy_status VARCHAR(32) NOT NULL DEFAULT 'DRAFT' COMMENT '策略状态：DRAFT/ACTIVE/EXPIRED/DISABLED',
  current_policy_version_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '当前生效策略版本编号',
  version_no BIGINT NOT NULL DEFAULT 1 COMMENT '策略版本号',
  idempotent_key VARCHAR(128) NOT NULL COMMENT '幂等键',
  request_hash VARCHAR(128) NOT NULL COMMENT '请求核心参数指纹',
  created_by VARCHAR(64) NOT NULL DEFAULT '' COMMENT '创建人',
  updated_by VARCHAR(64) NOT NULL DEFAULT '' COMMENT '更新人',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_policy_no (policy_no),
  UNIQUE KEY uk_policy_idempotent (idempotent_key),
  KEY idx_policy_scope_status (policy_scope, scope_key, business_scene, policy_status, effective_start_time, effective_end_time),
  KEY idx_policy_update_time (update_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清分结算策略主表';

CREATE TABLE ccs_settlement_policy_version (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  policy_version_no VARCHAR(64) NOT NULL COMMENT '策略版本编号',
  policy_no VARCHAR(64) NOT NULL COMMENT '策略编号',
  version_no BIGINT NOT NULL COMMENT '策略版本号',
  version_status VARCHAR(32) NOT NULL DEFAULT 'DRAFT' COMMENT '版本状态：DRAFT/EFFECTIVE/EXPIRED/CANCELED',
  settlement_cycle_type VARCHAR(32) NOT NULL DEFAULT 'T_PLUS_N' COMMENT '账期类型：T_PLUS_N/PERIODIC/MANUAL',
  cycle_basis VARCHAR(32) NOT NULL DEFAULT 'FULFILLMENT_TIME' COMMENT '账期起点：WRITE_OFF_TIME/FULFILLMENT_TIME/PAY_TIME',
  cycle_days INT NOT NULL DEFAULT 0 COMMENT '账期天数',
  effective_start_time DATETIME(3) NOT NULL COMMENT '生效开始时间',
  effective_end_time DATETIME(3) DEFAULT NULL COMMENT '生效结束时间，空表示长期有效',
  rule_snapshot_json JSON DEFAULT NULL COMMENT '版本规则快照JSON',
  publish_time DATETIME(3) DEFAULT NULL COMMENT '发布时间',
  operator_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '操作人编号',
  idempotent_key VARCHAR(128) NOT NULL COMMENT '幂等键',
  request_hash VARCHAR(128) NOT NULL COMMENT '请求核心参数指纹',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_policy_version_no (policy_version_no),
  UNIQUE KEY uk_policy_version_seq (policy_no, version_no),
  UNIQUE KEY uk_policy_version_idempotent (idempotent_key),
  KEY idx_policy_version_status (policy_no, version_status, effective_start_time, effective_end_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清分结算策略版本表';


CREATE TABLE ccs_policy_rule (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  rule_no VARCHAR(64) NOT NULL COMMENT '规则编号',
  policy_no VARCHAR(64) NOT NULL COMMENT '策略编号',
  policy_version_no VARCHAR(64) NOT NULL COMMENT '策略版本编号',
  rule_type VARCHAR(64) NOT NULL COMMENT '规则类型：SETTLEMENT_CYCLE/REVENUE_ALLOCATION/DISCOUNT_COST_BEARING/COMMISSION_ALLOCATION',
  amount_code VARCHAR(64) NOT NULL DEFAULT '' COMMENT '金额项编码，例如 ORDER_PAID/MEMBER_DISCOUNT_COST/PROMOTION_COMMISSION',
  amount_sub_code VARCHAR(64) NOT NULL DEFAULT '' COMMENT '金额子项编码',
  cycle_basis VARCHAR(32) NOT NULL DEFAULT '' COMMENT '账期起点：WRITE_OFF_TIME/FULFILLMENT_TIME/PAY_TIME',
  cycle_days INT NOT NULL DEFAULT 0 COMMENT '账期天数，SETTLEMENT_CYCLE 生效',
  rounding_mode VARCHAR(32) NOT NULL DEFAULT 'HALF_UP' COMMENT '舍入方式：HALF_UP/DOWN/UP',
  rule_payload_json JSON DEFAULT NULL COMMENT '规则扩展参数',
  rule_status VARCHAR(32) NOT NULL DEFAULT 'ACTIVE' COMMENT '规则状态：ACTIVE/DISABLED',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_rule_no (rule_no),
  KEY idx_rule_policy (policy_no, policy_version_no, rule_type, amount_code, deleted)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清分结算策略规则表';

CREATE TABLE ccs_policy_rule_participant (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  participant_rule_no VARCHAR(64) NOT NULL COMMENT '参与方规则编号',
  rule_no VARCHAR(64) NOT NULL COMMENT '规则编号',
  participant_role VARCHAR(64) NOT NULL COMMENT '参与方角色：MERCHANT/PLATFORM/CHANNEL/SERVICE_PROVIDER/PROMOTER/STORE/TECHNICIAN',
  participant_type VARCHAR(64) NOT NULL DEFAULT '' COMMENT '参与方类型',
  participant_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '参与方编号，空表示按上下文主体解析',
  allocation_type VARCHAR(32) NOT NULL DEFAULT 'RATIO' COMMENT '分配方式：RATIO/FIXED',
  ratio_bp INT NOT NULL DEFAULT 0 COMMENT '比例，basis point，10000=100%',
  fixed_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '固定金额，单位分，人民币',
  amount_direction VARCHAR(32) NOT NULL DEFAULT 'RECEIVABLE' COMMENT '金额方向：RECEIVABLE/PAYABLE/COST/COMMISSION',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_participant_rule_no (participant_rule_no),
  KEY idx_participant_rule (rule_no, participant_role, deleted)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清分结算策略参与方规则表';

CREATE TABLE ccs_source_event (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  event_no VARCHAR(64) NOT NULL COMMENT '来源事件编号',
  caller_system VARCHAR(64) NOT NULL COMMENT '调用方系统',
  biz_domain VARCHAR(64) NOT NULL COMMENT '业务域',
  biz_no VARCHAR(128) NOT NULL COMMENT '业务编号',
  event_type VARCHAR(64) NOT NULL COMMENT '事件类型：WRITE_OFF_COMPLETED/FULFILLMENT_COMPLETED',
  source_order_no VARCHAR(128) NOT NULL COMMENT '来源订单号',
  source_fulfillment_no VARCHAR(128) NOT NULL COMMENT '来源履约/核销号',
  merchant_no VARCHAR(64) NOT NULL COMMENT '商户编号',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  occurred_time DATETIME(3) NOT NULL COMMENT '事件发生时间',
  order_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '订单金额，单位分，人民币',
  paid_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '用户实付金额，单位分，人民币',
  payload_json JSON DEFAULT NULL COMMENT '业务事实扩展JSON',
  process_status VARCHAR(32) NOT NULL DEFAULT 'RECEIVED' COMMENT '处理状态：RECEIVED/PROCESSING/PROCESSED/FAILED/IGNORED',
  clearing_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '清分结果编号',
  retry_count INT NOT NULL DEFAULT 0 COMMENT '重试次数',
  last_error_code VARCHAR(64) NOT NULL DEFAULT '' COMMENT '最后错误码',
  last_error_message VARCHAR(512) NOT NULL DEFAULT '' COMMENT '最后错误信息',
  idempotent_key VARCHAR(128) NOT NULL COMMENT '幂等键',
  request_hash VARCHAR(128) NOT NULL COMMENT '请求核心参数指纹',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_event_no (event_no),
  UNIQUE KEY uk_event_idempotent (idempotent_key),
  UNIQUE KEY uk_event_biz (caller_system, biz_domain, biz_no, event_type),
  KEY idx_event_process (process_status, update_time),
  KEY idx_event_source_order (source_order_no, source_fulfillment_no),
  KEY idx_event_merchant_time (merchant_no, occurred_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清结算来源事件表';

CREATE TABLE ccs_clearing_result (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  clearing_no VARCHAR(64) NOT NULL COMMENT '清分结果编号',
  event_no VARCHAR(64) NOT NULL COMMENT '来源事件编号',
  caller_system VARCHAR(64) NOT NULL COMMENT '调用方系统',
  biz_domain VARCHAR(64) NOT NULL COMMENT '业务域',
  biz_no VARCHAR(128) NOT NULL COMMENT '业务编号',
  source_order_no VARCHAR(128) NOT NULL COMMENT '来源订单号',
  source_fulfillment_no VARCHAR(128) NOT NULL COMMENT '来源履约/核销号',
  merchant_no VARCHAR(64) NOT NULL COMMENT '商户编号',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  policy_no VARCHAR(64) NOT NULL COMMENT '命中策略编号',
  policy_version_no VARCHAR(64) NOT NULL COMMENT '命中策略版本编号',
  order_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '订单金额，单位分，人民币',
  paid_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '用户实付金额，单位分，人民币',
  total_receivable_cent BIGINT NOT NULL DEFAULT 0 COMMENT '收入类清分总额，单位分，人民币',
  total_cost_cent BIGINT NOT NULL DEFAULT 0 COMMENT '成本类清分总额，单位分，人民币',
  clearing_status VARCHAR(32) NOT NULL DEFAULT 'INIT' COMMENT '清分状态：INIT/CLEARING/CLEARED/CLEARING_FAILED/CANCELED',
  rule_snapshot_json JSON DEFAULT NULL COMMENT '规则快照JSON',
  retry_count INT NOT NULL DEFAULT 0 COMMENT '重试次数',
  last_error_code VARCHAR(64) NOT NULL DEFAULT '' COMMENT '最后错误码',
  last_error_message VARCHAR(512) NOT NULL DEFAULT '' COMMENT '最后错误信息',
  idempotent_key VARCHAR(128) NOT NULL COMMENT '幂等键',
  request_hash VARCHAR(128) NOT NULL COMMENT '请求核心参数指纹',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_clearing_no (clearing_no),
  UNIQUE KEY uk_clearing_event (event_no),
  UNIQUE KEY uk_clearing_idempotent (idempotent_key),
  KEY idx_clearing_status (clearing_status, update_time),
  KEY idx_clearing_order (source_order_no, source_fulfillment_no),
  KEY idx_clearing_merchant_time (merchant_no, create_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清分结果主表';

CREATE TABLE ccs_clearing_result_item (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  clearing_item_no VARCHAR(64) NOT NULL COMMENT '清分明细编号',
  clearing_no VARCHAR(64) NOT NULL COMMENT '清分结果编号',
  event_no VARCHAR(64) NOT NULL COMMENT '来源事件编号',
  source_order_no VARCHAR(128) NOT NULL COMMENT '来源订单号',
  source_fulfillment_no VARCHAR(128) NOT NULL COMMENT '来源履约/核销号',
  merchant_no VARCHAR(64) NOT NULL COMMENT '商户编号',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  participant_role VARCHAR(64) NOT NULL COMMENT '参与方角色：MERCHANT/PLATFORM/CHANNEL/SERVICE_PROVIDER/PROMOTER/STORE/TECHNICIAN',
  participant_type VARCHAR(64) NOT NULL DEFAULT '' COMMENT '参与方类型',
  participant_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '参与方编号',
  amount_code VARCHAR(64) NOT NULL COMMENT '金额项编码',
  amount_sub_code VARCHAR(64) NOT NULL DEFAULT '' COMMENT '金额子项编码',
  amount_direction VARCHAR(32) NOT NULL COMMENT '金额方向：RECEIVABLE/PAYABLE/COST/COMMISSION',
  amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '金额，单位分，人民币',
  settlement_required TINYINT NOT NULL DEFAULT 1 COMMENT '是否需要形成结算头寸',
  position_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '结算头寸编号',
  item_status VARCHAR(32) NOT NULL DEFAULT 'CLEARED' COMMENT '明细状态：CLEARED/POSITIONED/CANCELED',
  rule_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '命中规则编号',
  participant_rule_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '命中参与方规则编号',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_clearing_item_no (clearing_item_no),
  KEY idx_item_clearing (clearing_no, item_status),
  KEY idx_item_participant (participant_role, participant_no, amount_code),
  KEY idx_item_order (source_order_no, source_fulfillment_no),
  KEY idx_item_position (position_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清分结果明细表';

CREATE TABLE ccs_settlement_position (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  position_no VARCHAR(64) NOT NULL COMMENT '结算头寸编号',
  clearing_item_no VARCHAR(64) NOT NULL COMMENT '清分明细编号',
  clearing_no VARCHAR(64) NOT NULL COMMENT '清分结果编号',
  event_no VARCHAR(64) NOT NULL COMMENT '来源事件编号',
  source_order_no VARCHAR(128) NOT NULL COMMENT '来源订单号',
  source_fulfillment_no VARCHAR(128) NOT NULL COMMENT '来源履约/核销号',
  merchant_no VARCHAR(64) NOT NULL COMMENT '商户编号',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  participant_role VARCHAR(64) NOT NULL COMMENT '参与方角色',
  participant_type VARCHAR(64) NOT NULL DEFAULT '' COMMENT '参与方类型',
  participant_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '参与方编号',
  amount_code VARCHAR(64) NOT NULL COMMENT '金额项编码',
  position_direction VARCHAR(32) NOT NULL COMMENT '头寸方向：RECEIVABLE/PAYABLE',
  position_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '头寸金额，单位分，人民币',
  settlement_cycle_type VARCHAR(32) NOT NULL DEFAULT 'T_PLUS_N' COMMENT '账期类型：T_PLUS_N/PERIODIC/MANUAL',
  settlement_period_start_time DATETIME(3) NOT NULL COMMENT '结算归属周期开始时间',
  settlement_period_end_time DATETIME(3) NOT NULL COMMENT '结算归属周期结束时间',
  eligible_time DATETIME(3) NOT NULL COMMENT '可结算时间',
  lifecycle_status VARCHAR(32) NOT NULL DEFAULT 'IN_TRANSIT' COMMENT '生命周期状态：IN_TRANSIT/ELIGIBLE/LOCKED/ACCOUNTING_PROCESSING/ACCOUNTING_FAILED/UNKNOWN/ACCOUNTED/CANCELED',
  locked_batch_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '锁定批次号',
  locked_bill_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '锁定结算单号',
  locked_time DATETIME(3) DEFAULT NULL COMMENT '锁定时间',
  accounted_time DATETIME(3) DEFAULT NULL COMMENT '入账成功时间',
  retry_count INT NOT NULL DEFAULT 0 COMMENT '重试次数',
  last_error_code VARCHAR(64) NOT NULL DEFAULT '' COMMENT '最后错误码',
  last_error_message VARCHAR(512) NOT NULL DEFAULT '' COMMENT '最后错误信息',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_position_no (position_no),
  UNIQUE KEY uk_position_clearing_item (clearing_item_no),
  KEY idx_position_eligible (lifecycle_status, eligible_time, id),
  KEY idx_position_merchant (merchant_no, business_scene, lifecycle_status),
  KEY idx_position_bill (locked_bill_no),
  KEY idx_position_order (source_order_no, source_fulfillment_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='结算头寸表';

CREATE TABLE ccs_settlement_batch (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  batch_no VARCHAR(64) NOT NULL COMMENT '结算批次号',
  batch_type VARCHAR(32) NOT NULL DEFAULT 'MANUAL' COMMENT '批次类型：MANUAL/AUTO',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  merchant_no VARCHAR(64) NOT NULL COMMENT '商户编号',
  participant_role VARCHAR(64) NOT NULL COMMENT '结算主体角色',
  participant_no VARCHAR(64) NOT NULL COMMENT '结算主体编号',
  settlement_period_start_time DATETIME(3) NOT NULL COMMENT '结算周期开始时间',
  settlement_period_end_time DATETIME(3) NOT NULL COMMENT '结算周期结束时间',
  position_count INT NOT NULL DEFAULT 0 COMMENT '头寸数量',
  total_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '批次总金额，单位分，人民币',
  batch_status VARCHAR(32) NOT NULL DEFAULT 'CREATED' COMMENT '批次状态：CREATED/CONFIRMED/ACCOUNTING_PROCESSING/ACCOUNTED/ACCOUNTING_FAILED/UNKNOWN/CANCELED',
  operator_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '操作人编号',
  idempotent_key VARCHAR(128) NOT NULL COMMENT '幂等键',
  request_hash VARCHAR(128) NOT NULL COMMENT '请求核心参数指纹',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_batch_no (batch_no),
  UNIQUE KEY uk_batch_idempotent (idempotent_key),
  KEY idx_batch_merchant (merchant_no, business_scene, batch_status),
  KEY idx_batch_time (create_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='结算批次表';

CREATE TABLE ccs_settlement_bill (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  bill_no VARCHAR(64) NOT NULL COMMENT '结算单号',
  batch_no VARCHAR(64) NOT NULL COMMENT '结算批次号',
  caller_system VARCHAR(64) NOT NULL COMMENT '调用方系统',
  biz_domain VARCHAR(64) NOT NULL COMMENT '业务域',
  biz_no VARCHAR(128) NOT NULL COMMENT '业务编号',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  merchant_no VARCHAR(64) NOT NULL COMMENT '商户编号',
  participant_role VARCHAR(64) NOT NULL COMMENT '结算主体角色',
  participant_no VARCHAR(64) NOT NULL COMMENT '结算主体编号',
  settlement_scene VARCHAR(64) NOT NULL COMMENT '结算场景',
  settlement_period_start_time DATETIME(3) NOT NULL COMMENT '结算周期开始时间',
  settlement_period_end_time DATETIME(3) NOT NULL COMMENT '结算周期结束时间',
  position_count INT NOT NULL DEFAULT 0 COMMENT '头寸数量',
  total_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '结算总金额，单位分，人民币',
  bill_status VARCHAR(32) NOT NULL DEFAULT 'CREATED' COMMENT '结算单状态：CREATED/CONFIRMED/ACCOUNTING_PROCESSING/ACCOUNTED/ACCOUNTING_FAILED/UNKNOWN/CANCELED',
  accounting_posting_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '账务入账单号',
  accounting_request_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '账务请求号',
  fund_account_flow_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '资金账户流水号',
  operator_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '操作人编号',
  idempotent_key VARCHAR(128) NOT NULL COMMENT '幂等键',
  request_hash VARCHAR(128) NOT NULL COMMENT '请求核心参数指纹',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_bill_no (bill_no),
  UNIQUE KEY uk_bill_idempotent (idempotent_key),
  UNIQUE KEY uk_bill_biz (caller_system, biz_domain, biz_no, settlement_scene),
  KEY idx_bill_batch (batch_no),
  KEY idx_bill_merchant (merchant_no, business_scene, bill_status),
  KEY idx_bill_accounting (accounting_posting_no, accounting_request_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='结算单主表';

CREATE TABLE ccs_settlement_bill_item (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  bill_item_no VARCHAR(64) NOT NULL COMMENT '结算单明细号',
  bill_no VARCHAR(64) NOT NULL COMMENT '结算单号',
  batch_no VARCHAR(64) NOT NULL COMMENT '结算批次号',
  position_no VARCHAR(64) NOT NULL COMMENT '结算头寸编号',
  clearing_item_no VARCHAR(64) NOT NULL COMMENT '清分明细编号',
  source_order_no VARCHAR(128) NOT NULL COMMENT '来源订单号',
  source_fulfillment_no VARCHAR(128) NOT NULL COMMENT '来源履约/核销号',
  merchant_no VARCHAR(64) NOT NULL COMMENT '商户编号',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景',
  participant_role VARCHAR(64) NOT NULL COMMENT '参与方角色',
  participant_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '参与方编号',
  amount_code VARCHAR(64) NOT NULL COMMENT '金额项编码',
  amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '金额，单位分，人民币',
  item_status VARCHAR(32) NOT NULL DEFAULT 'CREATED' COMMENT '明细状态：CREATED/ACCOUNTED/CANCELED',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_bill_item_no (bill_item_no),
  UNIQUE KEY uk_bill_item_position (position_no),
  KEY idx_bill_item_bill (bill_no),
  KEY idx_bill_item_order (source_order_no, source_fulfillment_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='结算单明细表';

CREATE TABLE ccs_accounting_posting_order (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  posting_no VARCHAR(64) NOT NULL COMMENT '账务入账单号',
  bill_no VARCHAR(64) NOT NULL COMMENT '结算单号',
  batch_no VARCHAR(64) NOT NULL COMMENT '结算批次号',
  caller_system VARCHAR(64) NOT NULL COMMENT '调用方系统',
  biz_domain VARCHAR(64) NOT NULL COMMENT '业务域',
  biz_no VARCHAR(128) NOT NULL COMMENT '业务编号',
  accounting_scene VARCHAR(64) NOT NULL COMMENT '账务场景',
  participant_role VARCHAR(64) NOT NULL COMMENT '入账主体角色',
  participant_no VARCHAR(64) NOT NULL COMMENT '入账主体编号',
  posting_amount_cent BIGINT NOT NULL DEFAULT 0 COMMENT '入账金额，单位分，人民币',
  posting_status VARCHAR(32) NOT NULL DEFAULT 'INIT' COMMENT '入账状态：INIT/REQUESTING/SUCCESS/FAILED/UNKNOWN',
  accounting_idempotent_key VARCHAR(128) NOT NULL COMMENT '账务幂等键',
  accounting_request_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '账务请求号',
  fund_account_flow_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '资金账户流水号',
  request_hash VARCHAR(128) NOT NULL COMMENT '请求核心参数指纹',
  retry_count INT NOT NULL DEFAULT 0 COMMENT '重试次数',
  last_request_time DATETIME(3) DEFAULT NULL COMMENT '最近请求时间',
  last_error_code VARCHAR(64) NOT NULL DEFAULT '' COMMENT '最后错误码',
  last_error_message VARCHAR(512) NOT NULL DEFAULT '' COMMENT '最后错误信息',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_posting_no (posting_no),
  UNIQUE KEY uk_posting_bill (bill_no),
  UNIQUE KEY uk_accounting_idempotent (accounting_idempotent_key),
  UNIQUE KEY uk_posting_biz (caller_system, biz_domain, biz_no, accounting_scene),
  KEY idx_posting_status (posting_status, update_time),
  KEY idx_posting_accounting_request (accounting_request_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='账务入账单表';

CREATE TABLE ccs_operation_log (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID',
  operation_no VARCHAR(64) NOT NULL COMMENT '操作日志编号',
  aggregate_type VARCHAR(64) NOT NULL COMMENT '聚合类型',
  aggregate_no VARCHAR(64) NOT NULL COMMENT '聚合编号',
  operation_type VARCHAR(64) NOT NULL COMMENT '操作类型',
  before_status VARCHAR(32) NOT NULL DEFAULT '' COMMENT '操作前状态',
  after_status VARCHAR(32) NOT NULL DEFAULT '' COMMENT '操作后状态',
  operator_no VARCHAR(64) NOT NULL DEFAULT '' COMMENT '操作人编号',
  operation_source VARCHAR(64) NOT NULL DEFAULT '' COMMENT '操作来源',
  operation_payload_json JSON DEFAULT NULL COMMENT '操作扩展信息',
  remark VARCHAR(512) NOT NULL DEFAULT '' COMMENT '备注',
  version BIGINT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除标记',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) COMMENT '创建时间',
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3) COMMENT '更新时间',
  PRIMARY KEY (id),
  UNIQUE KEY uk_operation_no (operation_no),
  KEY idx_operation_aggregate (aggregate_type, aggregate_no, create_time),
  KEY idx_operation_type_time (operation_type, create_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='清结算操作日志表';
