stateDiagram-v2
    [*] --> INIT
    INIT --> CLEARING
    CLEARING --> CLEARED
    CLEARED --> PENDING
    PENDING --> MATURED
    MATURED --> LOCKED
    LOCKED --> CONFIRMED
    CONFIRMED --> ACCOUNTING_PROCESSING
    ACCOUNTING_PROCESSING --> ACCOUNTING_SUCCESS
    ACCOUNTING_PROCESSING --> FAILED
    ACCOUNTING_PROCESSING --> UNKNOWN
    FAILED --> ACCOUNTING_PROCESSING: retry
    UNKNOWN --> ACCOUNTING_SUCCESS: reconcile success
    UNKNOWN --> FAILED: reconcile failed
    PENDING --> CANCELED
    LOCKED --> CANCELED
